# feNG

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml  debug.yml  debugWithPetsc.yml
cmake/: FindGmsh.cmake  FindMKL.cmake
contrib/gmsh/: Numeric.cpp  SBoundingBox3d.h  STensor3.cpp  STensor3.h  SVector3.h  fullMatrix.cpp  fullMatrix.h  rtree.h
contrib/root_finder/: root_finder.hpp
contrib/unsupported/Eigen/: MatrixFunctions
data/: cube1.msh  cube2.msh  cube3.msh  cube4.msh  cylindre_P1.msh  cylindre_P2.msh  jetImpactant_P2.msh  kovasznay1.msh  kovasznay2.msh  kovasznay3.msh  kovasznay4.msh  mechanicalPiece.geo  mechanicalPiece.msh  mechanicalPieceCoarse.msh  poiseuille0.msh  poiseuille1.msh  square.geo  square.msh  square1.msh  square1Msh2.msh  square2.msh  square2Msh2.msh  square3.msh  square3Msh2.msh  square4.msh  square4Msh2.msh  square5.msh  square_tp1_1_1.msh  square_tp1_1_2.msh  square_tp1_1_3.msh  square_tp1_1_4.msh  stokes1.msh  stokes2.msh  stokes3.msh  stokes4.msh
data/mmsMeshes/: square2.msh  square3.msh  square5.msh  square6.msh  transfiniteSquare.geo
exe/: CHNS_RT_adapt_unsteady.cpp  CMakeLists.txt  P1_non_conforme.cpp  REFERENCE_circle.cpp  SecondStokesProblem.cpp  VonKarmanAPI.cpp  VonKarman_BDF.cpp  cylinderUnsteady.cpp  cylindreIsoAdapt.cpp  dummyTest.cpp  example1.cpp  example1MPI.cpp  example1_1D.cpp  example2.cpp  example2_1D.cpp  example4.cpp  exampleConvergence.cpp  exampleDiffusionUnsteady.cpp  flattenedCos.cpp  gmshAPITest.cpp  isometry.cpp  jetImpactant.cpp  poiseuille.cpp  poiseuilleMPI.cpp  tanhAdapt.cpp  test0D.cpp  testBDF1.cpp  testBDF1_0D.cpp  testBDF2.cpp  testBDF2weakBC.cpp  testBDF_0D_crossed_equations.cpp  testCSR.cpp  testColor.cpp  testCurved.cpp  testCylinder.cpp  testCylinderUnsteady.cpp  testDC2F_0D.cpp  testDC2F_1D.cpp  testDC2F_1D_weakBC.cpp  testDC2F_1D_weakBC_edo1.cpp  (+40 more)
exe/G/: CMakeLists.txt  EF5.C
exe/S/: CMakeLists.txt  feNGs.cpp
exe/T/: CMakeLists.txt  EF5.C
src/: CHNS_Solver.cpp  CHNS_Solver.h  CMakeLists.txt  DiffusionSolver.cpp  DiffusionSolver.h  GenericSolver.cpp  GenericSolver.h  TransientAdapter.cpp  TransientAdapter.h  ellipseToolbox.cpp  ellipseToolbox.h  feAPI.h  feAdaptMesh.cpp  feAdaptMesh.h  feBilinearForm.cpp  feBilinearForm.h  feBoundaryConditions.cpp  feBoundaryConditions.h  feCncGeo.cpp  feCncGeo.h  feColoring.cpp  feColoring.h  feCompressedRowStorage.cpp  feCompressedRowStorage.h  feComputer.cpp  feComputer.h  feConstants.h  feCurvedAdapt.cpp  feCurvedAdapt.h  feEdge.h  feEigenProblem.cpp  feEigenProblem.h  feElement.h  feExporter.cpp  feExporter.h  feFunction.h  feGraphics.cpp  feGraphics.h  feLine.h  feLinearSystem.cpp  (+96 more)
tests/: CMakeLists.txt  convergenceLaplace.cpp  convergenceLaplace.output  dofNumbering.cpp  interpolation.cpp  quadratureSquare.cpp  template  tests.h
tests/withLinearSolver/: CHNS_Abels.output  CHNS_BtE.output  CHNS_MMS.output  CHNS_VolumeAveraged.output  CH_MMS.output  CMakeLists.txt  cahnHilliard.cpp  convergenceLaplace.cpp  convergenceLaplace.output  navier_stokes.cpp  navier_stokes_MMS.output  scalarFE.cpp  scalarFE_advdiff.output  scalarFE_advdiffreact.output  scalarFE_diffusion.output  scalarFE_mixedDiffFieldDep.output  scalarFE_mixedDiffusion.output  scalarFE_nonlineardiffusion.output  scalarFEunsteady.cpp  scalarFEunsteady_bdf1.output  scalarFEunsteady_bdf2.output  scalarFEunsteady_linearODE.output  scalarFEunsteady_nonlinearODE.output  stokes.cpp  stokes_MMS.output  vectorFE.cpp  vectorFE_vectorLaplacian.output  vectorFE_weakGradient.output  vectorFEunsteady.cpp  vectorFEunsteady_bdf1.output  vectorFEunsteady_bdf2.output  vectorFEunsteady_diffusion.output  vectorFEunsteady_linearODE.output  vectorFEunsteady_nsmms.output
tests/withoutLinearSolver/: CMakeLists.txt  dofNumbering.cpp  dofNumbering.output  interpolation.cpp  interpolation.output  interpolationVector.output  quadratureSquare.cpp  quadratureSquare.output  quadratureTri.cpp
